5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3113/executions/1594_2425.log
== TEST (2019-03-26 16:32:10) 
-- CODE:
d=float(input("distância")
c=float(input("combustível gasto")

p=(d+p)/2

print(round(p,3)

-- ERROR:
File "XXXX", line 2
    c=float(input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:32:17) 
-- CODE:
d=float(input("distância")
c=float(input("combustível gasto")

p=(d+c)/2

print(round(p,3)

-- ERROR:
File "XXXX", line 2
    c=float(input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:32:30) 
-- CODE:
d=float(input("distância"))
c=float(input("combustível gasto"))

p=(d+c)/2

print(round(p,3)

-- ERROR:
File "XXXX", line 7
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:32:35) 
-- CODE:
d=float(input("distância"))
c=float(input("combustível gasto"))

p=(d+c)/2

print(round(p,3)

-- ERROR:
File "XXXX", line 7
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:32:50) 
-- CODE:
d=float(input("distância"))
c=float(input("combustível gasto"))

p=(d+c)/2

print(round(p,3))

-- OUTPUT:
15.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:33:03) 
-- CODE:
d=float(input("distância"))
c=float(input("combustível gasto"))

p=(d+c)/2

print(round(p,3))

-- OUTPUT:
15.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:33:13) 
-- CODE:
d=float(input("distancia"))
c=float(input("combustível gasto"))

p=(d+c)/2

print(round(p,3))

-- OUTPUT:
15.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:33:22) 
-- CODE:
d=float(input("distancia"))
c=float(input("combustivel gasto"))

p=(d+c)/2

print(round(p,3))

-- OUTPUT:
15.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:35:17) 
-- CODE:
d=float(input("distancia"))
c=float(input("combustivel gasto"))

p=d/c

print(round(p,3))

-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:36:30) 
-- CODE:
d=float(input("distancia"))
c=float(input("combustivel gasto"))

p=d/c


print(round(p,3)"km/l")

-- ERROR:
File "XXXX", line 7
    print(round(p,3)"km/l")
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:37:00) 
-- CODE:
d=float(input("distancia"))
c=float(input("combustivel gasto"))
f="km/l"
p=d/c


print(round(p,3),f)

-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:37:05) 
-- CODE:
d=float(input("distancia"))
c=float(input("combustivel gasto"))
f="km/l"
p=d/c


print(round(p,3),f)

-- EXECUTION TIME:
0.1115
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
